responsive layout bug fix

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ html{
 
 body{
     margin:0;
-    min-height: 100vh;
     font-family: Piazzolla,sans-serif;
     background: whitesmoke;
     
@@ -18,6 +17,7 @@ h1{
     letter-spacing: 5px;
 }
 
+/* loader */
 .loader{
     position: fixed;
     top:0;
@@ -34,17 +34,17 @@ h1{
 }
 
 /* image container */
-.image-container{
+ .image-container{
     margin: 10px 30%;
-
 }
+ 
 .image-container img{
-    width: 100;
+    width: 100%;
     margin-top: 5px;
-}
+} 
 
-/* media query : large smartphones */
-@media screen and (max-width:600px){
+/*media query : large smartphones */ 
+ @media screen and (max-width:600px){
     h1{
         font-size: 20px;
     }
